--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "gm": "1.18.1",
 	"http2": "3.2.0",
     "jade": "1.11.0",
+	"mkdirp": "0.5.1",
     "multer": "0.1.8",
     "prelude-ls": "1.1.2",
     "livescript": "1.4.0",
