--- a/.gitignore
+++ b/.gitignore
@@ -1,16 +1,5 @@
-# npm
+/node_modules
+/built
+/typings
 npm-debug.log
-/node_modules/
-
-# Built
-/lib/
-
-# Mac
-.DS_Store
-
-# Windows
-Thumbs.db
-
-# Other
-/resource-projects/
-/certs/
+/tmp
