--- a/package.json
+++ b/package.json
@@ -12,33 +12,30 @@
     "build": "gulp build",
     "watch": "gulp watch",
     "lint": "gulp lint",
-    "clean": "gulp clean",
-    "clean-all": "gulp clean-all",
     "test": "gulp test"
   },
   "license": "MIT",
   "devDependencies": {
-    "del": "^2.0.2",
-    "dtsm": "^0.11.0",
-    "gulp": "^3.9.0",
-    "gulp-babel": "^5.2.1",
-    "gulp-notify": "^2.2.0",
-    "gulp-plumber": "^1.0.1",
-    "gulp-tslint": "^3.3.0",
-    "gulp-typescript": "^2.8.1",
-    "tslint": "^2.5.0",
-    "typescript": "^1.6.2",
-    "typescript-require": "^0.2.9"
+    "babel-preset-es2015": "6.3.13",
+    "dtsm": "0.13.0",
+    "gulp": "3.9.0",
+    "gulp-babel": "6.1.1",
+    "gulp-notify": "2.2.0",
+    "gulp-plumber": "1.0.1",
+    "gulp-tslint": "4.1.1",
+    "gulp-typescript": "2.10.0",
+    "tslint": "3.1.1",
+    "typescript": "1.7.3",
+    "typescript-require": "0.2.9"
   },
   "dependencies": {
-    "body-parser": "1.13.2",
+    "body-parser": "1.14.1",
     "express": "4.13.3",
     "file-type": "^3.3.0",
     "gm": "1.21.1",
     "http2": "3.2.0",
-    "jade": "1.11.0",
     "mkdirp": "0.5.1",
-    "multer": "0.1.8"
+    "multer": "1.1.0"
   },
   "private": true
 }
