--- a/package.json
+++ b/package.json
@@ -31,9 +31,8 @@
   "dependencies": {
     "body-parser": "1.15.0",
     "express": "4.13.4",
-    "file-type": "^3.3.0",
+    "file-type": "3.3.0",
     "gm": "1.21.1",
-    "http2": "3.2.0",
     "mkdirp": "0.5.1",
     "multer": "1.1.0"
   },
