--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
     "file-type": "3.3.0",
     "gm": "1.21.1",
     "mkdirp": "0.5.1",
-    "multer": "1.1.0"
+    "multer": "1.1.0",
+    "rimraf": "^2.5.1"
   },
   "private": true
 }
