--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "typescript-require": "0.2.9"
   },
   "dependencies": {
+    "mmmagick": "0.4.4",
     "body-parser": "1.15.1",
     "express": "4.13.4",
     "file-type": "3.8.0",
