--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "gulp-typescript": "2.13.6",
     "tslint": "3.14.0",
     "typescript": "1.8.10",
-    "typescript-require": "0.2.9"
+    "typescript-require": "0.2.9-1"
   },
   "dependencies": {
     "body-parser": "1.15.2",
