--- a/package.json
+++ b/package.json
@@ -23,8 +23,7 @@
     "gulp-tslint": "6.0.2",
     "gulp-typescript": "2.13.6",
     "tslint": "3.14.0",
-    "typescript": "1.8.10",
-    "typescript-require": "0.2.9-1"
+    "typescript": "1.8.10"
   },
   "dependencies": {
     "@types/body-parser": "0.0.33",
