--- a/package.json
+++ b/package.json
@@ -8,28 +8,20 @@
   },
   "scripts": {
     "start": "node ./built/index.js",
-    "build": "gulp build",
-    "watch": "gulp watch",
-    "lint": "gulp lint",
-    "test": "gulp test"
+    "build": "tsc",
+    "lint": "find src -type f -name '*.ts' | xargs tslint",
+    "test": "npm run lint && npm run build"
   },
   "license": "MIT",
   "devDependencies": {
-    "gulp": "3.9.1",
-    "gulp-notify": "3.0.0",
-    "gulp-plumber": "1.1.0",
-    "gulp-tslint": "8.1.1",
-    "gulp-typescript": "3.1.7",
+    "@types/body-parser": "1.16.3",
+    "@types/express": "^4.0.36",
+    "@types/mkdirp": "^0.3.29",
+    "@types/multer": "0.0.34",
     "tslint": "5.4.3",
     "typescript": "2.3.4"
   },
   "dependencies": {
-    "@types/body-parser": "1.16.3",
-    "@types/gulp": "^4.0.2",
-    "@types/gulp-tslint": "^3.6.30",
-    "@types/gulp-typescript": "2.13.0",
-    "@types/mkdirp": "^0.3.29",
-    "@types/multer": "0.0.34",
     "body-parser": "1.17.2",
     "express": "4.15.2",
     "file-type": "5.1.1",
